# variance

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: diff.py  process.py  txt2tei.py
tei2xhtml/: tei2xhtml.xsl
tests/: test_legacy.py  test_operations.py  test_processing.py  test_suffix_tree.py
tests/data/LaVieilleFille/: 1vf.xml
tests/data/samples/exemple_variance/: comparaison_la_vieille_fille_v1.output.xml  la_vieille_fille_v1.txt
tests/data/samples/post_processing/: 1vf.txt  1vf.xml  1vndtt.txt  1vndtt.xml  2vf.txt  2vf.xml  2vndtt.xml
tests/data/samples/post_processing/outputs/: 1vf.txt  1vf.xml  1vndtt.txt  1vndtt.xml  2vf.txt  2vf.xml  2vndtt.txt  2vndtt.xml
tests/data/tests/Labelle/: Informations.xml
variance/: operations.py  processing.py  suffix_tree.py
variance/medite/: aligne.py  alignement.py  medite.py  recouvrement.py  suffix_tree.py  synthetic.py  utile.py  utils.py
variance/medite/medite/: aligne.py  recouvrement.py  suffix_tree.py  synthetic.py
