[tool.poetry]
name = "variance"
version = "0.1.0"
description = ""
authors = ["louisChiffre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
ipython = "^8.25.0"
pandas = "^2.2.2"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"

